<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, IsaAlarmActivity!</string>
    <string name="app_name">未来闹钟</string>
    
    <string name="add_alarm">添加闹钟</string>
    
    <string name="alarm_name">名称设置</string>
    <string name="alarm_time">响铃时间</string>
    <string name="alarm_weekly">星期设置</string>
    <string name="alarm_occurs">响铃设置</string>
    <string name="alarm_ring_mode">铃声模式</string>
    
    <string name="alarm_name_default">未设置闹铃</string>
    <string name="alarm_msg_getup">起床了</string>
    <string name="alarm_msg_sleep5">再睡5分钟</string>
    
    <string name="stop_alarm">强制停止</string>
    
    <string name="vibrate">振动</string>
    <string name="repeat">重复</string>
    <string name="times">次数</string>
    <string name="tones">铃声</string>
    
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="back">返回</string>
    
    <string name="alarm_name_title">选择或输入闹钟名称</string>
    <string name="alarm_name_xiaonao">小闹</string>
    <string name="alarm_name_xiaomeiqiu">小煤球</string>
    <string name="alarm_name_xiaolongmao">小龙猫</string>
    
    <string name="alarm_name_common">常用叫醒</string>
    <string name="alarm_name_special">特殊提醒</string>
    <string name="alarm_name_meeting">开会提醒</string>
    <string name="alarm_name_manul">自己取个名字吧</string>
    <string name="please_input">设置应用中您的昵称</string>
    
    <string name="alarm_weekly_title">选择星期模式</string>
    <string name="alarm_weekly_everyday">每天</string>
    <string name="alarm_weekly_weekday">仅工作日</string>
    <string name="alarm_weekly_weekend">仅周末</string>
    <string name="alarm_weekly_manual">手动选择</string>
    <string name="alarm_weekly_once">仅单次</string>
    
    <string name="alarm_occurs_title">选择闹铃次数</string>
    <string name="alarm_occurs_once">仅响一次</string>
    <string name="alarm_occurs_times3">响铃3次</string>
    <string name="alarm_occurs_times5">响铃5次</string>
    <string name="alarm_occurs_n">响铃N次</string>
    
    <string name="alarm_interval_title">每次间隔时间</string>
    <string name="alarm_after_5min">5分钟</string>
    <string name="alarm_after_10min">10分钟</string>
    <string name="alarm_after_15min">15分钟</string>
    
    <string name="alarm_ring_title">选择响铃模式</string>
    <string name="alarm_ring_manul_tone">自选铃声</string>
    <string name="alarm_ring_manul_music">自选歌曲</string>
    <string name="alarm_ring_vibrate_only">仅震动</string>
    
    <string name="alarm_ring_silent">静音</string>
    <string name="alarm_ring_system">系统铃声</string>
    <string name="alarm_ring_totoro">豆豆龙</string>
    
    <string name="alarm_ring_vibrate">震动</string>
    
    <string name="change_bg">更多背景</string>
    <string name="change_bg_title">请选择背景图片</string>
    <string name="bg_totoro">龙猫</string>
    <string name="bg_xmas">圣诞节</string>
    <string name="bg_jimi">几米</string>

    <string name="set">确定</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    
    <string-array name="alarm_repeat_entries">
        <item >周一</item>
        <item >周二</item>
        <item >周三</item>
        <item >周四</item>
        <item >周五</item>
        <item >周六</item>
        <item >周日</item>
    </string-array>
         <string name="sleepState">sleepState</string>
     <string name="isLaiChuang">isLaiChuang</string>
     <string name="awakeTime">awakeTime</string>
      <string name="weiboAccess">weiboAccess</string>
       <string name="accessUri">accessUri</string>
       <string name="alarm_gameEnable">赖床游戏</string>
       <string name="colorgame">\"选色游戏\"</string>
</resources>