<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rgWeeklyMode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rbWeeklyEveryday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_weekly_everyday" android:gravity="center"/>

        <RadioButton
            android:id="@+id/rbWeeklyWeekday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_weekly_weekday" android:layout_gravity="center" android:gravity="center"/>

        <RadioButton
            android:id="@+id/rbWeeklyManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_weekly_manual" android:layout_gravity="center" android:gravity="center"/>

        <RadioButton
            android:id="@+id/rbWeeklyOnce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_weekly_once" android:layout_gravity="center" android:gravity="center"/>

    </RadioGroup>

</LinearLayout>