<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rgIntervalMode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rbAfter5min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_after_5min" android:gravity="center"/>

        <RadioButton
            android:id="@+id/rbAfter10min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_after_10min" android:layout_gravity="center" android:gravity="center"/>

        <RadioButton
            android:id="@+id/rbAfter15min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_after_15min" android:layout_gravity="center" android:gravity="center"/>

        
         <RadioButton
            android:id="@+id/closeRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="关闭贪睡模式" android:layout_gravity="center" android:gravity="center"/>
        
    </RadioGroup>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="关闭贪睡模式后，闹钟会持续作响直到手动关闭，不推荐使用哦~" />

</LinearLayout>